--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -12,6 +12,7 @@ jobs:
         run: |
           which ls
           env
+          echo "hello world"
   parellel-job-macros:
     runs-on: macos-latest
     steps:
