skiiping this ci [skip ci]

--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -13,6 +13,7 @@ jobs:
           which ls
           env
           echo "hello world"
+          which cp
   parellel-job-macros:
     runs-on: macos-latest
     steps:
